use tomee-maven-plugin